# speedrun-survivors

./: .gitignore  Cargo.toml  Dockerfile.bevy  LICENSE.md  README.md  index.html
.github/workflows/: deploy-bevy.yml
helper-scripts/: .gitignore  package.json
helper-scripts/src/: mint_nft.ts
speedrun-survivors-api/: .gitignore  Cargo.toml  README.md  sample.env  scratchpad.http
speedrun-survivors-api/src/: main.rs  utils.rs
speedrun-survivors-api/src/game_client_routes/: mod.rs  model.rs  routes.rs
speedrun-survivors-api/src/helius_rpc/: mod.rs
speedrun-survivors-bevy/: Cargo.toml  index.html  trunk_server.sh
speedrun-survivors-bevy/assets/: level.ldtk
speedrun-survivors-bevy/assets/level/: level.ldtk
speedrun-survivors-bevy/assets/maps/: map_1.ldtk
speedrun-survivors-bevy/src/: animation.rs  assets.rs  bullet.rs  enemy.rs  enemy_spawner.rs  gun.rs  health.rs  heroes.rs  hud.rs  keyboard_key.rs  main.rs  menu.rs  player.rs  player_attach.rs  state.rs  sword.rs
speedrun-survivors-bevy/src/actives/: dash.rs
speedrun-survivors-bevy/src/data/: abilities.rs  hero.rs  item.rs  level.rs  map.rs  mod.rs
speedrun-survivors-bevy/src/enemy/: enemy_spawner.rs  enemy_type.rs  mod.rs
speedrun-survivors-bevy/src/menu/: game_over.rs  level_up.rs  mod.rs  pause.rs  splash_screen.rs
speedrun-survivors-bevy/src/passives/: mod.rs  orca_chopper.rs  rug_pull.rs  shitcoin.rs  whale.rs
speedrun-survivors-bevy/src/player/: mod.rs  player_attach.rs  player_camera.rs
speedrun-survivors-bevy/src/plugins/: assets.rs  audio_manager.rs  camera_shake.rs  coin_rewards.rs  combat_text.rs  dash.rs  death.rs  dodge.rs  gameplay_effects.rs  health.rs  hud.rs  menu.rs  mod.rs  pickup.rs  sfx_manager.rs  status_effect.rs  vfx_manager.rs  wallet.rs
speedrun-survivors-bevy/src/plugins/wallet/: solana_rpc_client.rs  wasm_wallet.rs
speedrun-survivors-bevy/src/weapon/: flame_thrower.rs  gun.rs  hammer.rs  mod.rs  switch_weapon.rs  sword.rs  weapon_animation_effect.rs  weapon_type.rs
speedrun-survivors-bevy/src/weapon/gun/: bullet.rs  mod.rs
