[package]
name = "speedrun-survivors-bevy"
version.workspace = true
edition.workspace = true
default-run = "speedrun-survivors-bevy"

[dependencies]
anyhow.workspace = true
bevy = { version = "0.11" }
bevy_editor_pls = { version = "0.6", optional = true }
bevy_ecs_ldtk = { version = "0.8", features = ["atlas"] }
rand.workspace = true
strum.workspace = true

[features]
dev = ["bevy/dynamic_linking", "bevy_editor_pls"]
