[package]
name = "speedrun-survivors-bevy"
version.workspace = true
edition.workspace = true
default-run = "speedrun-survivors-bevy"

[dependencies]
anyhow.workspace = true
bevy = { version = "0.11" }
bevy_editor_pls = { version = "0.6", optional = true }
bevy_ecs_ldtk = { version = "0.8", features = ["atlas"] }
leafwing-input-manager = "0.10.0"
rand.workspace = true
strum.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
web-sys = { version = "0.3.64", optional = true }
js-sys = { version = "0.3.54", optional = true }
log = "0.4"
futures-lite = "2.2"

[features]
dev = ["bevy/dynamic_linking", "bevy_editor_pls"]
wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "web-sys/Window",
    "wasm-logger",
]
