[package]
name = "speedrun-survivors-bevy"
version.workspace = true
edition.workspace = true
default-run = "speedrun-survivors-bevy"

[features]

dev = ["local", "bevy/dynamic_linking"]

local = ["reqwest", "reqwest/json"]

wasm = [
    "wasm-bindgen",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "web-sys/Window",
]

[dependencies]
anyhow.workspace = true
bevy = { version = "0.11" }
bevy_ecs_ldtk = { version = "0.8", features = ["atlas"] }
leafwing-input-manager = "0.10.0"
rand.workspace = true
strum.workspace = true
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3.64", optional = true }
js-sys = { version = "0.3.54", optional = true }
reqwest = { version = "0.11", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
